2003-03-26  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_file_put_real): 
	  libmpio/fat.c (mpio_fatentry_new, mpio_fatentry_read): 
	  Small fixes which try to support changes in internal FAT
	  structure (Not Tested!)

2003-03-22  Markus Germeier  <mager@tzi.de>

	* kernel/mpio.c (probe_mpio, write_mpio, read_mpio): 
	  automagically find USB bulk endpoints and use them

2003-03-15  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_init_internal): detect up to four
	  internal memory chips
	* libmpio/fat.c (mpio_fatentry_hw2entry, mpio_fatentry_entry2hw): 
	  libmpio/io.c (mpio_io_block_delete_phys, mpio_io_spare_read): 
	  changes to support four internal chips
	
2003-03-14  Andreas Buesching <crunchy@tzi.de>

	* mpio.spec.in: 
	  add mpio.h and defs.h to the rpm.
	  creating a devel rpm would be oversized
	  
2003-03-14  Markus Germeier  <mager@tzi.de>

	* libmpio/directory.c (mpio_dentry_put): 
	  fixed missing first char issue

2003-03-13  Markus Germeier  <mager@tzi.de>

	* trying to fix iconv UNICODE conversions on BIG_ENDIAN
	  machines (not sure about that one!)

2003-03-11  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_init): added code the recognize new MPIO
	  models (FD100/FL100/FY100), no idea how to handle them, yet!

2003-03-08  Markus Germeier  <mager@tzi.de>

	* mpio.spec.in, etc/Makefile.am: fixed packaging problems
	* libmpio/mpio.c (mpio_init): re-added memset, this time at the
	  correct location
	* mpiosh/callback.c (mpiosh_cmd_mem): removes warning messages
	  (this should hopefully work now ;-)
	  (mpiosh_cmd_dump): fixed core dump in "dump" command

2003-02-21    <crunchy@tzi.de>

	* libmpio/directory.h, libmpio/directory.c, libmpio/mpio.h,
	libmpio/mpio.c: add patch from Sebastian Kloska
	<kloska@scienion.de>. containing possibility to chage name of
	destination when copying files, moving files and reordering files
	in directory

2002-12-06    <crunchy@tzi.de>
